:heavy_plus_sign: Add validator & add flag
