# docs/openapi/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginRequest"
+                            "$ref": "#/definitions/validators.LoginRequest"
                         }
                     }
                 ],
@@ -241,7 +241,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.SecretLoginRequest"
+                            "$ref": "#/definitions/validators.SecretLoginRequest"
                         }
                     }
                 ],
@@ -325,21 +325,6 @@
         }
     },
     "definitions": {
-        "dto.LoginRequest": {
-            "type": "object",
-            "required": [
-                "password",
-                "user_id"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
         "dto.LoginResponse": {
             "type": "object",
             "properties": {
@@ -429,21 +414,6 @@
                 }
             }
         },
-        "dto.SecretLoginRequest": {
-            "type": "object",
-            "required": [
-                "secret_answer",
-                "user_id"
-            ],
-            "properties": {
-                "secret_answer": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
         "dto.SecretQuestionResponse": {
             "type": "object",
             "properties": {
@@ -472,9 +442,9 @@
                     "example": "山田太郎"
                 },
                 "phone": {
-                    "description": "電話番号\n@Example \"090-1234-5678\"",
+                    "description": "電話番号\n@Example \"FLAG_dSQVRVTEFUSU9OU19GT1JfRklOSVNISU5H\"",
                     "type": "string",
-                    "example": "090-1234-5678"
+                    "example": "FLAG_dSQVRVTEFUSU9OU19GT1JfRklOSVNISU5H"
                 }
             }
         },
@@ -579,11 +549,15 @@
         "validators.CreateReservationRequest": {
             "type": "object",
             "required": [
+                "end_date",
                 "plan_id",
                 "start_date",
                 "user_id"
             ],
             "properties": {
+                "end_date": {
+                    "type": "string"
+                },
                 "plan_id": {
                     "type": "string"
                 },
@@ -592,6 +566,43 @@
                 },
                 "user_id": {
                     "type": "string"
+                }
+            }
+        },
+        "validators.LoginRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "user_id"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 3
+                },
+                "user_id": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 3
+                }
+            }
+        },
+        "validators.SecretLoginRequest": {
+            "type": "object",
+            "required": [
+                "secret_answer",
+                "user_id"
+            ],
+            "properties": {
+                "secret_answer": {
+                    "type": "string",
+                    "minLength": 1
+                },
+                "user_id": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 3
                 }
             }
         }
